src/test/ui/const-generics/issues/issue-83249.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-83249.rs:19:9
   |
LL |     let _ = foo([0; 1]);
   |         ^
   |
help: consider giving this pattern a type
   |
LL |     let _: _ = foo([0; 1]);
   |          +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
